test/corpus/code_tag.txt
===
code tag
===

/**
 * {@code test}
 */

---

(document
  (description
    (code_tag
      (tag_name)
      (code))))

===
code tag: markdown
===

/// {@code test}

---

(document
  (markdown_description
    (code_tag
      (tag_name)
      (code))))


===
code tag: without any code
===

/**
 * {@code}
 */

---

(document
  (description
    (code_tag
      (tag_name))))
   
===
code tag: markdown without any code
===

/// {@code}

---

(document
  (markdown_description
    (code_tag
      (tag_name))))
   
