test/corpus/doc_root_tag.txt
===
docRoot tag
===

/**
 * {@docRoot}
 */

---

(document
  (description
    (doc_root_tag
      (tag_name))))

===
docRoot tag: markdown
===

/// {@docRoot}

---

(document
  (markdown_description
    (doc_root_tag
      (tag_name))))
