test/corpus/link_tag_fragment.txt
===
link tag: fragment + label
===

/**
 * {@link ##fragment label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (fragment))
      (description))))

===
link tag: markdown fragment + label
===

/// {@link ##fragment label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (fragment))
      (description))))

===
link tag: fragment
===

/**
 * {@link ##fragment}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (fragment)))))

===
link tag: markdown fragment
===

/// {@link ##fragment}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (fragment)))))
