test/corpus/link_tag_module.txt
===
link tag: module + label
===

/**
 * {@link java.base/ label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier)))
      (description))))

===
link tag: markdown module + label
===

/// {@link java.base/ label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier)))
      (description))))

===
link tag: module
===

/**
 * {@link java.base/}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))))))

===
link tag: markdown module
===

/// {@link java.base/}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))))))
