test/corpus/link_tag_module_type.txt
===
link tag: module + type + label
===

/**
 * {@link java.base/java.lang.System label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier)))
      (description))))

===
link tag: markdown module + type + label
===

/// {@link java.base/java.lang.System label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier)))
      (description))))

===
link tag: module + type
===

/**
 * {@link java.base/java.lang.System}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))))))

===
link tag: markdown module + type
===

/// {@link java.base/java.lang.System}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))))))
