test/corpus/link_tag_module_type_fragment.txt
===
link tag: module + type + fragment + label
===

/**
 * {@link java.base/java.lang.System##fragment label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment))
      (description))))

===
link tag: markdown module + type + fragment + label
===

/// {@link java.base/java.lang.System##fragment label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment))
      (description))))

===
link tag: module + type + fragment
===

/**
 * {@link java.base/java.lang.System##fragment}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment)))))

===
link tag: markdown module + type + fragment
===

/// {@link java.base/java.lang.System##fragment}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment)))))
