test/corpus/link_tag_module_type_member.txt
===
link tag: module + type + member + label
===

/**
 * {@link java.base/java.lang.System#getProperty(String key) label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (member
          (method
            (identifier)
              (parameters
                (parameter
                  (parameter_type
                    (type
                      (identifier)))
                    (identifier))))))
      (description))))

===
link tag: markdown module + type + member + label
===

/// {@link java.base/java.lang.System#getProperty(String key) label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (member
          (method
            (identifier)
              (parameters
                (parameter
                  (parameter_type
                    (type
                      (identifier)))
                    (identifier))))))
      (description))))

===
link tag: module + type + member
===

/**
 * {@link java.base/java.lang.System#getProperty(String key)}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (member
          (method
            (identifier)
              (parameters
                (parameter
                  (parameter_type
                    (type
                      (identifier)))
                    (identifier)))))))))

===
link tag: markdown module + type + member
===

/// {@link java.base/java.lang.System#getProperty(String key)}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (module
          (identifier)
          (identifier))
        (type
          (identifier)
          (identifier)
          (identifier))
        (member
          (method
            (identifier)
              (parameters
                (parameter
                  (parameter_type
                    (type
                      (identifier)))
                    (identifier)))))))))
