test/corpus/link_tag_trailing_space.txt
===
link tag: description with trailing space
===

/**
 * {@link #member }
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier))))))

===
link tag: markdown description with trailing space
===

/// {@link #member }

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (member
          (identifier))))))
