test/corpus/link_tag_type.txt
===
link tag: type + label
===

/**
 * {@link java.lang.System label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier)))
      (description))))

===
link tag: markdown type + label
===

/// {@link java.lang.System label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier)))
      (description))))

===
link tag: type
===

/**
 * {@link java.lang.System}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier))))))

===
link tag: markdown type
===

/// {@link java.lang.System}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier))))))
