test/corpus/link_tag_type_fragment.txt
===
link tag: type + fragment + label
===

/**
 * {@link java.lang.System##fragment label}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment))
      (description))))

===
link tag: markdown type + fragment + label
===

/// {@link java.lang.System##fragment label}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment))
      (description))))

===
link tag: type + fragment
===

/**
 * {@link java.lang.System##fragment}
 */

---

(document
  (description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment)))))

===
link tag: markdown type + fragment
===

/// {@link java.lang.System##fragment}

---

(document
  (markdown_description
    (link_tag
      (tag_name)
      (reference
        (type
          (identifier)
          (identifier)
          (identifier))
        (fragment)))))
