test/corpus/see_tag_fragment.txt
===
see tag: fragment + label
===

/**
 * @see ##fragment label
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (fragment))
    (description)))

===
see tag: markdown fragment + label
===

/// @see ##fragment label

---

(document
  (see_tag
    (tag_name)
    (reference
      (fragment))
    (description)))

===
see tag: fragment
===

/**
 * @see ##fragment
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (fragment))))

===
see tag: markdown fragment
===

/// @see ##fragment

---

(document
  (see_tag
    (tag_name)
    (reference
      (fragment))))
