test/corpus/see_tag_module.txt
===
see tag: module
===

/**
 * @see java.base/
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (module
        (identifier)
        (identifier)))))

===
see tag: markdown module
===

/// @see java.base/

---

(document
  (see_tag
    (tag_name)
    (reference
      (module
        (identifier)
        (identifier)))))
