test/corpus/see_tag_module_type.txt
===
see tag: module + type + label
===

/**
 * @see java.base/java.lang.System label
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (module
        (identifier)
        (identifier))
      (type
        (identifier)
        (identifier)
        (identifier)))
    (description)))

===
see tag: markdown module + type + label
===

/// @see java.base/java.lang.System label

---

(document
  (see_tag
    (tag_name)
    (reference
      (module
        (identifier)
        (identifier))
      (type
        (identifier)
        (identifier)
        (identifier)))
    (description)))

===
see tag: module + type
===

/**
 * @see java.base/java.lang.System
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (module
        (identifier)
        (identifier))
      (type
        (identifier)
        (identifier)
        (identifier)))))

===
see tag: markdown module + type
===

/// @see java.base/java.lang.System

---

(document
  (see_tag
    (tag_name)
    (reference
      (module
        (identifier)
        (identifier))
      (type
        (identifier)
        (identifier)
        (identifier)))))
