test/corpus/see_tag_string.txt
===
see tag: string
===

/**
 * @see "string"
 */

---

(document
  (see_tag
    (tag_name)
    (string_literal
      (quoted_value))))

===
see tag: markdown string
===

/// @see "string"

---

(document
  (see_tag
    (tag_name)
    (string_literal
      (quoted_value))))
