test/corpus/see_tag_url.txt
===
see tag: url
===

/**
 * @see <a href="http://example.com/">example</a>
 */

---

(document
  (see_tag
    (tag_name)
    (url_title
      (description))))

===
see tag: markdown url
===

/// @see <a href="http://example.com/">example</a>

---

(document
  (see_tag
    (tag_name)
    (url_title
      (description))))
