test/corpus/serial_tag.txt
===
serial tag
===

/**
 * @serial My description
 */

---

(document
  (serial_tag
    (tag_name)
    (description)))

===
serial tag: markdown
===

/// @serial My description

---

(document
  (serial_tag
    (tag_name)
    (description)))

===
serial tag: include
===

/**
 * @serial include
 */

---

(document
  (serial_tag
    (tag_name)))

===
serial tag: markdown include
===

/// @serial include

---

(document
  (serial_tag
    (tag_name)))

===
serial tag: exclude
===

/**
 * @serial exclude
 */

---

(document
  (serial_tag
    (tag_name)))

===
serial tag: markdown exclude
===

/// @serial exclude

---

(document
  (serial_tag
    (tag_name)))
