test/corpus/since_tag.txt
===
since tag
===

/**
 * @since My Special 1.0
 */

---

(document
  (since_tag
    (tag_name)
    (description)))

===
since tag: markdown
===

/// @since My Special 1.0

---

(document
  (since_tag
    (tag_name)
    (description)))

===
since tag: missing description
===

/**
 * @since
 */

---

(document
  (since_tag
    (tag_name)))

===
since tag: markdown missing description
===

/// @since

---

(document
  (since_tag
    (tag_name)))
