test/corpus/version_tag.txt
===
version tag
===

/**
 * @version My Special 1.0
 */

---

(document
  (version_tag
    (tag_name)
    (description)))

===
version tag: markdown
===

/// @version My Special 1.0

---

(document
  (version_tag
    (tag_name)
    (description)))

===
version tag: missing description
===

/**
 * @version
 */

---

(document
  (version_tag
    (tag_name)))

===
version tag: markdown missing description
===

/// @version

---

(document
  (version_tag
    (tag_name)))
